<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">clienttest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="client_id">e9fbccdae98d5696</string>
    <string name="client_secret">9fa283e1eca2d4e8</string>
    <string name="connection_repository_encryption_password">password</string>
    <string name="connection_repository_encryption_salt">5c0744940b5c369b</string>
    <string name="base_url">http://124.205.66.62:11080/healthplus/</string>
    <string name="register">register</string>
    <string name="register_cancel">Cancel</string>
    <string name="register_register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="signin">signin</string>
    <string name="signin_signin">signin</string>
    <string name="signin_cancel">Cancel</string>
    <string name="main_public">public</string>
    <string name="main_protect">protect</string>
    <string name="title_activity_get_public_main">GetPublicMainActivity</string>
    <string name="title_activity_get_protect">GetProtectActivity</string>
    <string name="title_activity_get_public">GetPublicActivity</string>
    <string name="pulic_get">publicget</string>
    <string name="protect_get">protectget</string>
    <string name="signout">注销</string>
    <string name="title_activity_main_tab_wiget">MainTabWiget</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="username">用户名</string>
    <string name="nickname">昵称</string>
    <string name="email">邮件</string>
    <string name="phone">电话</string>
    <string name="sex">性别</string>
    <string name="radiobuttonman">男</string>
    <string name="radiobuttonwoman">女</string>
    <string name="weight">体重</string>
    <string name="height">身高</string>
    <string name="saveprofile">保存</string>

</resources>
