<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:inputType="textEmailAddress"
        android:ems="10" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:inputType="textPassword"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_register_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/register_password"
        android:layout_marginTop="28dp"
        android:text="@string/register_cancel" />

    <Button
        android:id="@+id/button_register_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_register_cancel"
        android:layout_alignRight="@+id/register_username"
        android:layout_marginRight="26dp"
        android:text="@string/register_register" />

</RelativeLayout>